--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "@glorywong/downmp",
-  "version": "1.0.1",
+  "name": "@gloxy/downmp-cli",
+  "version": "0.1.0",
   "description": "Download musics for programming in https://musicforprogramming.net/ ",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "downmp": "cli.js"
+    "gdownmp": "cli.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "exit 0"
   },
-  "keywords": [],
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "download",
+    "music",
+    "programming"
+  ],
   "author": "glorywong1001@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@gloxy/unilog": "^1.0.0",
     "axios": "^0.21.1",
     "commander": "^7.2.0",
     "configstore": "^6.0.0",
@@ -23,7 +31,6 @@
     "mkdirp": "^1.0.4",
     "ora": "^5.4.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GloryWong/downmp.git"
